break input form into two distinct forms (buttons were causing issues)

--- a/web/static/cli.css
+++ b/web/static/cli.css
@@ -315,11 +315,12 @@ div#input-top {
     padding: 10px;
 }
 
-div#command-top, div#target-top {
+form#target-input-form, form#command-input-form {
     display: inline-block;
 }
 
-form#input-form {
+div#target-top, div#command-top {
+    display: inline-block;
     margin: 0px;
     margin-bottom: 10px;
 }
